Additional migrations for Set<Integer> to IntSet